--- a/style.css
+++ b/style.css
@@ -58,5 +58,21 @@ p{
     width: 90%;
     color: white;
 }
-  
 
+button {
+    border: none;
+    color: rgb(0, 0, 0);
+    background-color: rgb(0, 171, 142);
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    border-radius: 5px;
+}
+button:hover{
+    background-color: white;
+}
